compiler/tests/fixtures/invalid/semantics/inheritance_cycle.viv
// Inheritance cycle — should be rejected

action cycle-a from cycle-b:
    roles:
        @actor:
            as: initiator


action cycle-b from cycle-a:
    roles:
        @actor:
            as: initiator
